--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,9 @@
   https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
+* {
+    box-sizing: border-box;
+}
 
 :root {
     --dark: #121212;
@@ -77,7 +80,7 @@ body {
     }
 }
 main {
-    width: 720px;
+    width: 960px;
     max-width: calc(100% - 2em);
     margin: auto;
     padding: 3em 1em;
