--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,17 +1,12 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
-* {
-    box-sizing: border-box;
-}
+@import url('./reset.css');
+@import url('./utopia.css');
 
 :root {
     --dark: #121212;
     --light: #f5f5f5;
     --gray: #a6a6a6;
     --dark-gray: #3d3d3d;
+    --container-width: 1024px;
 }
 [data-theme="light"] body {
     --accent: var(--dark);
@@ -68,48 +63,18 @@ body {
     background-size: 100% 600px;
     word-wrap: break-word;
     overflow-wrap: break-word;
-    font-size: 20px;
-    line-height: 1.7;
+    font-size: var(--step-1);
     color: var(--accent);
-    background: var(--background);
-    transition: background 700ms 300ms ease-in-out;
+    background-color: var(--background);
     transition: color 100ms;
+    transition: background-color 300ms linear;
+    width: 100%;
     @media (prefers-reduced-motion) {
         transition: background 0;
         transition: color 0 0;
     }
 }
-main {
-    width: 960px;
-    max-width: calc(100% - 2em);
-    margin: auto;
-    padding: 3em 1em;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0 0 0.5rem 0;
-    color: rgb(var(--dark));
-    line-height: 1.2;
-}
-h1 {
-    font-size: 3.052em;
-}
-h2 {
-    font-size: 2.441em;
-}
-h3 {
-    font-size: 1.953em;
-}
-h4 {
-    font-size: 1.563em;
-}
-h5 {
-    font-size: 1.25em;
-}
+
 strong,
 b {
     font-weight: 700;
@@ -119,57 +84,6 @@ a {
 }
 a:hover {
     color: var(--dark-gray);
-}
-p {
-    margin-bottom: 1em;
-}
-.prose p {
-    margin-bottom: 2em;
-}
-textarea {
-    width: 100%;
-    font-size: 16px;
-}
-input {
-    font-size: 16px;
-}
-table {
-    width: 100%;
-}
-img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-}
-code {
-    padding: 2px 5px;
-    background-color: rgb(var(--gray));
-    border-radius: 2px;
-}
-pre {
-    padding: 1.5em;
-    border-radius: 8px;
-}
-pre > code {
-    all: unset;
-}
-blockquote {
-    border-left: 4px solid var(--dark);
-    padding: 0 0 0 20px;
-    margin: 0px;
-    font-size: 1.333em;
-}
-hr {
-    border: none;
-    border-top: 1px solid rgb(var(--gray));
-}
-@media (max-width: 720px) {
-    body {
-        font-size: 18px;
-    }
-    main {
-        padding: 1em;
-    }
 }
 
 .sr-only {
