--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,9 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Bio from "../components/Bio.astro";
+import AboutMe from "../components/AboutMe.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import SocialLinks from "../components/SocialLinks.astro";
 ---
 
 <!doctype html>
@@ -16,6 +18,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
     <div class="u-container">
       <Header />
       <Bio />
+      <SocialLinks />
+      <!-- POSTS LIST -->
+      <AboutMe />
       <Footer />
     </div>
   </body>
