case studies template

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -49,7 +49,7 @@
         <h3>Back-end</h3>
         <p>
           Node / Express / Rust / WASM / MySQL / MongoDB / Websockets / REST /
-          GraphQL Postman
+          GraphQL / Postman
         </p>
       </div>
       <div class="devops">
@@ -58,14 +58,17 @@
       </div>
     </div>
     <div class="photo">
-      <img src="/img/me_news.jpg" alt="Jessai Maya Photo" />
+      <img src="/img/jessai_maya_profile_picture.jpg" alt="Jessai Maya Photo" />
     </div>
   </div>
 </section>
 
 <style>
+  .about-me {
+    position: relative;
+  }
   .intro {
-    margin: var(--space-3xl) 0;
+    margin: var(--space-l-xl) 0;
     display: flex;
     justify-content: space-between;
   }
@@ -195,7 +198,7 @@
     .intro {
       padding: var(--step-0);
       flex-direction: column;
-      margin-bottom: 0;
+      margin: 0 auto;
     }
     h2 {
       font-size: var(--step-3);
