--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Bio from "../components/Bio.astro";
 import AboutMe from "../components/AboutMe.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import SocialLinks from "../components/SocialLinks.astro";
+import Work from "../components/Work.astro";
 ---
 
 <!doctype html>
@@ -21,6 +22,7 @@ import SocialLinks from "../components/SocialLinks.astro";
       <SocialLinks />
       <!-- POSTS LIST -->
       <AboutMe />
+      <Work />
       <Footer />
     </div>
   </body>
