--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,150 +3,227 @@ import HeaderLink from "./HeaderLink.astro";
 ---
 
 <header>
-    <nav>
-        <div class="name">
-            <h2>
-                <a href="/">Jessaí<br />Maya</a>
-            </h2>
-        </div>
-        <div class="internal-links">
-            <HeaderLink href="/about">About</HeaderLink>
-            <HeaderLink href="/projects">Projects</HeaderLink>
-            <HeaderLink href="/blog">Articles</HeaderLink>
-        </div>
-        <div class="theme">
-            <div class="theme-switch" id="theme-switcher">
-                <div class="fill"></div>
-            </div>
-            <div class="circle"></div>
-        </div>
-    </nav>
+  <nav>
+    <div class="name">
+      <h2>
+        <a href="/">Jessaí<br />Maya</a>
+      </h2>
+    </div>
+    <div class="hamburger-menu" id="hamburger-menu">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+    <div class="internal-links">
+      <HeaderLink href="/" title="Home">Home</HeaderLink>
+      <HeaderLink href="/projects" title="Projects">Projects</HeaderLink>
+      <HeaderLink href="/blog" title="Articles">Articles</HeaderLink>
+    </div>
+    <div class="menu-list" id="menu-list">
+      <button class="close-btn" id="close-btn">&times;</button>
+      <HeaderLink href="/" title="Home">Home</HeaderLink>
+      <HeaderLink href="/projects" title="Projects">Projects</HeaderLink>
+      <HeaderLink href="/blog" title="Articles">Articles</HeaderLink>
+    </div><div class="theme">
+      <div class="theme-switch" id="theme-switcher">
+        <div class="fill"></div>
+      </div>
+      <div class="circle"></div>
+    </div>
+  </nav>
 </header>
 <style>
-    header {
-        padding: 0 var(--space-s);
-        background: transparent;
-        box-shadow: 0 2px 8px rgba(var(--black), 5%);
-        margin: auto;
-    }
-    h2 {
-        margin: 0;
-        display: inherit;
-    }
+  header {
+    padding: 0 var(--space-s);
+    background: transparent;
+    box-shadow: 0 2px 8px rgba(var(--black), 5%);
+    margin: auto;
+  }
+  h2 {
+    margin: 0;
+    display: inherit;
+  }
 
-    nav h2 a,
-    nav h2 a.active {
-        text-decoration: none;
-        padding-left: 0;
-        font-family: "Open Sans", sans-serif;
-        font-weight: 300;
-        font-size: var(--step-1);
-    }
-    nav {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-bottom: var(--space-l);
-    }
-    nav .name,
-    nav .theme {
-        flex: 1;
-        display: flex;
-    }
-    nav .theme {
-        justify-content: flex-end;
-    }
-    nav .internal-links {
-        display: flex;
-        flex: 3;
-        justify-content: center;
-        align-items: center;
-    }
-    nav a {
-        font-size: var(--step-0);
-        padding: var(--space-s) var(--space-m);
-        color: var(--black);
-        border-bottom: 3px solid transparent;
-        text-decoration: none;
-        font-family: "Open Sans", sans-serif;
-        font-weight: 400;
-    }
-    nav a.active {
-        text-decoration: none;
-        border-bottom-color: var(--accent);
-    }
+  nav h2 a,
+  nav h2 a.active {
+    text-decoration: none;
+    padding-left: 0;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: var(--step-1);
+  }
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: var(--space-l);
+  }
+  nav .name,
+  nav .theme {
+    flex: 1;
+    display: flex;
+  }
+  nav .theme {
+    justify-content: flex-end;
+  }
+  .internal-links {
+    display: flex;
+    flex: 3;
+    justify-content: center;
+    align-items: center;
+  }
+  nav a {
+    font-size: var(--step-0);
+    padding: var(--space-s) var(--space-m);
+    color: var(--black);
+    border-bottom: 3px solid transparent;
+    text-decoration: none;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+  }
+  nav a.active {
+    text-decoration: none;
+    border-bottom-color: var(--accent);
+  }
 
-    a.selected {
-        font-weight: bold;
-    }
+  a.selected {
+    font-weight: bold;
+  }
 
-    .theme {
-        position: relative;
-    }
+  .theme {
+    position: relative;
+  }
 
-    .circle {
-        position: absolute;
-        width: 300px;
-        height: 300px;
-        border: solid 1px var(--accent);
-        border-radius: 50%;
-        margin: 0 auto;
-        top: -175px;
-        right: -130px;
-        z-index: -1;
-        opacity: 0.3;
-        float: right;
-    }
+  .circle {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    border: solid 1px var(--accent);
+    border-radius: 50%;
+    margin: 0 auto;
+    top: -175px;
+    right: -130px;
+    z-index: -1;
+    opacity: 0.3;
+    float: right;
+  }
 
-    .theme-switch {
-        border: solid 3px var(--accent);
-        width: 25px;
-        height: 25px;
-        border-radius: 50%;
-        position: relative;
-        overflow: hidden;
-        cursor: pointer;
+  .theme-switch {
+    border: solid 3px var(--accent);
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  .fill {
+    background: var(--accent);
+    width: 25px;
+    height: 25px;
+    border: none;
+    transform: translate(5px, 5px) rotate(45deg);
+  }
+  .hamburger-menu {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+  }
+  .bar {
+    width: 25px;
+    height: 3px;
+    background-color: var(--accent);
+    margin: 4px 0;
+    transition: 0.4s;
+  }
+  .menu-list {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 200px;
+    height: 100%;
+    z-index: 1;
+    min-height: 100vh;
+    background-color: var(--background);
+    box-shadow: 2px 0 5px rgba(var(--black), 0.5);
+    transition: left 0.3s ease;
+  }
+  .menu-list.show {
+    left: 0;
+  }
+  .close-btn {
+    align-self: flex-end;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    cursor: pointer;
+    margin: var(--space-s);
+    color: var(--accent);
+  }
+  @media (max-width: 48rem) {
+    .internal-links {
+      display: none;
     }
-    .fill {
-        background: var(--accent);
-        width: 25px;
-        height: 25px;
-        border: none;
-        transform: translate(5px, 5px) rotate(45deg);
+    .hamburger-menu {
+      display: flex;
     }
+  }
 </style>
 <!-- Theme Switcher -->
 <script is:inline>
-    const themeSwitcher = document.getElementById("theme-switcher");
-    let currentTheme = localStorage.getItem("theme");
-    const enableTheme = (theme) => {
-        console.log("enabling...", theme);
-        document.documentElement.setAttribute("data-theme", theme);
-        localStorage.setItem("theme", theme);
-    };
-    switch (currentTheme) {
-        case "light":
-            enableTheme("light");
-            break;
-        case "dark":
-            enableTheme("dark");
-            break;
-        default:
-            enableTheme("light");
-            break;
+  const themeSwitcher = document.getElementById("theme-switcher");
+  let currentTheme = localStorage.getItem("theme");
+  const enableTheme = (theme) => {
+    document.documentElement.setAttribute("data-theme", theme);
+    localStorage.setItem("theme", theme);
+  };
+  switch (currentTheme) {
+    case "light":
+      enableTheme("light");
+      break;
+    case "dark":
+      enableTheme("dark");
+      break;
+    default:
+      enableTheme("light");
+      break;
+  }
+  themeSwitcher.addEventListener("click", () => {
+    if (document.documentElement.hasAttribute("data-theme")) {
+      currentTheme = document.documentElement.getAttribute("data-theme");
     }
-    themeSwitcher.addEventListener("click", () => {
-        if (document.documentElement.hasAttribute("data-theme")) {
-            currentTheme = document.documentElement.getAttribute("data-theme");
-        }
-        switch (currentTheme) {
-            case "light":
-                enableTheme("dark");
-                break;
-            case "dark":
-            default:
-                enableTheme("light");
-                break;
-        }
+    switch (currentTheme) {
+      case "light":
+        enableTheme("dark");
+        break;
+      case "dark":
+      default:
+        enableTheme("light");
+        break;
+    }
+  });
+  document
+    .getElementById("hamburger-menu")
+    .addEventListener("click", function () {
+      const menuList = document.getElementById("menu-list");
+      menuList.classList.toggle("show");
     });
+
+  document.getElementById("close-btn").addEventListener("click", function () {
+    const menuList = document.getElementById("menu-list");
+    menuList.classList.remove("show");
+  });
+
+  document.addEventListener("click", function (event) {
+    const menuList = document.getElementById("menu-list");
+    const hamburgerMenu = document.getElementById("hamburger-menu");
+    if (
+      !menuList.contains(event.target) &&
+      !hamburgerMenu.contains(event.target)
+    ) {
+      menuList.classList.remove("show");
+    }
+  });
 </script>
