--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,11 +19,11 @@ import SocialLinks from "./SocialLinks.astro";
         <li class="nav-item">
           <a href="" class="nav-link" title="home">Home</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a href="" class="nav-link" title="projects">Projects</a>
         </li><li class="nav-item">
           <a href="" class="nav-link" title="Articles">Articles</a>
-        </li>
+        </li> -->
       </ul>
       <div class="site">
         <p class="title">Site</p>
