--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,14 +16,14 @@ import HeaderLink from "./HeaderLink.astro";
     </div>
     <div class="internal-links">
       <HeaderLink href="/" title="Home">Home</HeaderLink>
-      <HeaderLink href="/projects" title="Projects">Projects</HeaderLink>
-      <HeaderLink href="/blog" title="Articles">Articles</HeaderLink>
+      <!-- <HeaderLink href="/projects" title="Projects">Projects</HeaderLink>
+      <HeaderLink href="/blog" title="Articles">Articles</HeaderLink> -->
     </div>
     <div class="menu-list" id="menu-list">
       <button class="close-btn" id="close-btn">&times;</button>
       <HeaderLink href="/" title="Home">Home</HeaderLink>
-      <HeaderLink href="/projects" title="Projects">Projects</HeaderLink>
-      <HeaderLink href="/blog" title="Articles">Articles</HeaderLink>
+      <!-- <HeaderLink href="/projects" title="Projects">Projects</HeaderLink>
+      <HeaderLink href="/blog" title="Articles">Articles</HeaderLink> -->
     </div><div class="theme">
       <div class="theme-switch" id="theme-switcher">
         <div class="fill"></div>
