minor fixes for build step

--- a/src/layouts/Studies.astro
+++ b/src/layouts/Studies.astro
@@ -95,7 +95,7 @@ const { title, description, task, position, clients, stack } = Astro.props;
         list-style: none;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-row: auto;
+        grid-template-rows: auto;
         justify-content: space-around;
         align-items: center;
         align-content: center;
@@ -129,7 +129,7 @@ const { title, description, task, position, clients, stack } = Astro.props;
         text-align: center;
       }
       .insights {
-        colot: var(--accent);
+        color: var(--accent);
         font-size: var(--step-0);
         list-style: none;
         display: flex;
